Corrección de issues

--- a/nosotros.html
+++ b/nosotros.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <!-- Logo -->
     <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 
 <body>
@@ -28,76 +29,24 @@
     <!-- ================= CONTENIDO ============== -->
     <main class="wrapper">
         <section class="container">
-            <div class="title">
-                <h1>Resumen</h1>
-            </div>
-            <!-- ============= Resumen del proyecto ================ -->
-            <div class="card" style="margin-bottom: 1.5rem; text-align: justify;">
-                <div class="card-body">
-                    <p>Este proyecto es un e-commerce enfocado a la venta de vestimenta para personas con gusto y
-                        apreciación de lo artesanal.</p>
-                    <p>Su desarrollo se dio durante el bootcamp de Generation México para convertirnos en
-                        Desarrolladores
-                        Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
-                        de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
-                        Javascript, con apoyo de Bootstrap.</p>
-                </div>
-            </div>
             <!-- ========== contenedor de biografías =========== -->
             <div class="title">
-                <h2>Equipo</h2>
+                <h2>Equipo de Programadores</h2>
             </div>
             <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-6">
-                    <!-- 1 Alexis -->
-                    <div class="col" style="margin-bottom: 2rem;">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+                    <!-- 1 Bryan -->
+                    <div class="col text-focus-in-3" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/AlexisSanchez.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded static" alt="Alexis">
-                                <img class="active" src="src/img/nosotros/AlexisSanchez.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="Alexis">
-                            </div>
-                            <div class="card-body">
-                                <div class="title__card">
-                                    <span>Alexis Sánchez León</span>
-                                </div>
-                                <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. Industrial</span>
-                                </div>
-                                <p class="card-text" style="text-align: justify;">Soy un desarrollador Java, enfocado en
-                                    el frontend y en la gestión de proyectos con el marco de trabajo SCRUM para la
-                                    entrega de valor oportuna.</p>
-                            </div>
-                            <!-- redes sociales -->
-                            <div class="social__media card-footer ">
-                                <a href="https://github.com/ALEXISSL10" target="_blank"><span><i
-                                            class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/alexis-s%C3%A1nchez-le%C3%B3n"
-                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 2 Bryan -->
-                    <div class="col" style="margin-bottom: 2rem;">
-                        <div class="card  card-team h-100">
-                            <div style="text-align: center;">
-                                <img src="src/img/nosotros/BryanMartinez.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded static" alt="Bryan">
-                                <img class="active" src="src/img/nosotros/BryanMartinez.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="Bryan">
+                                <img src="./src/img/nosotros/BryanMartinez.jpeg" class="img_compa" alt="ElBryan">
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
                                     <span>Bryan Martínez</span>
                                 </div>
                                 <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
+                                    <span>Desarrollador Java <br> Ing. en Sistemas Computacionales</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Apasionado por la tecnología y por el
                                     desarrollo de software con base en metodologías ágiles, aportando lo mejor de mí en
@@ -113,64 +62,25 @@
                         </div>
                     </div>
 
-                    <!-- 3 Carlos -->
-                    <div class="col" style="margin-bottom: 2rem;">
+                    <!-- 2 Ignacio -->
+                    <div class="col text-focus-in-3" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/JuanCarlos.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded static" alt="Carlos">
-                                <img class="active" src="src/img/nosotros/JuanCarlos.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="Carlos">
-                            </div>
-                            <div class="card-body">
-                                <div class="title__card">
-                                    <span>Carlos Bernal</span>
-                                </div>
-                                <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
-                                </div>
-                                <p class="card-text" style="text-align: justify;">Entusiasta por la tecnología y
-                                    apasionado por la programación, me gusta la resolución de problemas y participar
-                                    activamente del trabajo en equipo.
-                                </p>
-                            </div>
-                            <!-- redes sociales -->
-                            <div class="social__media card-footer ">
-                                <a href="https://github.com/krlozwar" target="_blank"><span><i
-                                            class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/juan-carlos-bernal-sandoval-a062b6219/"
-                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 4 Ignacio -->
-                    <div class="col" style="margin-bottom: 2rem;">
-                        <div class="card  card-team h-100">
-                            <div style="text-align: center;">
-                                <img src="src/img/nosotros/CarlosZepeda.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded static" alt="Carlos">
-                                <img class="active" src="src/img/nosotros/CarlosZepeda.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="Carlos">
+                                <img src="./src/img/nosotros/CarlosZepeda.jpeg" class="img_compa" alt="Carlos">
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
                                     <span>Ignacio Zepeda</span>
                                 </div>
                                 <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. Ambiental</span>
+                                    <span>Desarrollador Java <br> Ing. Ambiental</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Busco optimizar y automatizar procesos
                                     con ayuda de la tecnología en sinergia con el framework SCRUM para potenciar los
-                                    resultados.
-                                </p>
+                                    resultados.</p>
                             </div>
                             <!-- redes sociales -->
-                            <div class="social__media card-footer">
+                            <div class="social__media card-footer ">
                                 <a href="https://github.com/zeped418" target="_blank"><span><i
                                             class="bi bi-github social__media__icon"></i></span></a>
                                 <a href="https://www.linkedin.com/in/carlos-zep-ram" target="_blank"><span><i
@@ -179,22 +89,20 @@
                         </div>
                     </div>
 
-                    <!-- 5 Luis-->
-                    <div class="col" style="margin-bottom: 2rem;">
+
+
+                    <!-- 3 Luis-->
+                    <div class="col text-focus-in-5" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/JuanAristeo.jpeg"
-                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded static" alt="Luis">
-                                <img class="active" src="src/img/nosotros/JuanAristeo.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Luis">
+                                <img src="./src/img/nosotros/JuanAristeo.jpeg" class="img_compa" alt="Carlos">
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
                                     <span>J. Luis Cruz</span>
                                 </div>
                                 <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. en Mecatrónica</span>
+                                    <span>Desarrollador Java <br> Ing. en Mecatrónica</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">
                                     Un ingeniero apasionado por la tecnología enfocado en la programación con
@@ -210,22 +118,26 @@
                             </div>
                         </div>
                     </div>
-                    <!-- 6 Roberto Rivas -->
-                    <div class="col" style="margin-bottom: 2rem;">
+
+                    <!-- 4 Roberto Rivas -->
+                    <div class="col text-focus-in-6" style="margin-bottom: 2rem;">
                         <div class="card  card-team h-100">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/RobertoRivas.jpeg"
+                                <!-- <img src="src/img/nosotros/RobertoRivas.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
                                     class="img-fluid rounded static" alt="Roberto">
-                                <img class="active" src="src/img/nosotros/RobertoRivas.jpeg" style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                class="img-fluid rounded" alt="Roberto">
+                                <img class="active" src="src/img/nosotros/RobertoRivas.jpeg"
+                                    style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                    class="img-fluid rounded" alt="Roberto"> -->
+                                <img src="./src/img/nosotros/RobertoRivas.jpeg" class="img_compa" alt="Carlos">
+
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
                                     <span>Roberto Rivas</span>
                                 </div>
                                 <div class="subtitle__card">
-                                    <span>Desarrollador Java | Ing. Biomédico</span>
+                                    <span>Desarrollador Java <br> Ing. Biomédico</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">
                                     Un soñador bohemio e ingeniero enfocado al backend. Con gusto por el aprendizaje de
@@ -241,6 +153,45 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="title">
+                <h1>Sobre el Proyecto</h1>
+            </div>
+            <!-- ============= Resumen del proyecto ================ -->
+            <div class="card text-focus-in-2" style="margin-bottom: 1.5rem; text-align: justify;">
+                <div class="card-body">
+                    <p style="margin: 1rem;">Esta increíble e-commerce la creamos bajo el apoyo y la guía de <a href="https://www.linkedin.com/in/amy-hean/" class="generation" target="_blank">Amizaday Hernández</a>, <a href="https://www.linkedin.com/in/laura-mart%C3%ADnez-guzman/" class="generation" target="_blank">Aline Martínez</a>, <a href="https://www.linkedin.com/in/andrea-uribe-cabrera-b39b8b9b/" class="generation" target="_blank">Andrea Uribe</a> y <a href="https://www.linkedin.com/in/jcvl/" class="generation" target="_blank">Juan Carlos Valencia</a>,
+                        durante el Bootcamp Java Full Stack Jr en <a href="https://mexico.generation.org/"
+                            class="generation" target="_blank">Generation México</a>.
+                        <br>
+                        <br>
+                        En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco de trabajo SCRUM y
+                        utilizamos las siguientes tecnologías:
+                    <div class="icons_tech">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"
+                            title="HTML5" alt="HTML" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" title="CSS"
+                            alt="CSS" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                            title="JavaScript" alt="JavaScript" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" title="bootstrap"
+                        alt="bootstrap" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg"
+                            title="VSC" alt="VSC" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg"
+                            title="figma" alt="figma" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"
+                            title="Java" alt="Java" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg"
+                            title="MySQL" alt="MySQL" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg"
+                            title="Git" alt="Git" width="50" height="50" />
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg"
+                            title="GitHub" alt="GitHub" width="50" height="50" />
+                    </div>
+                    </p>
                 </div>
             </div>
         </section>
