--- a/productos.html
+++ b/productos.html
@@ -74,6 +74,14 @@
 
   <!-- Productos -->
   <script src="./js/productos2.js"></script>
+
+  <script>
+    function cambiarimagen(smallimg)
+    {
+      var fullimg=document.getElementById("img-grande");
+      fullimg.src = smallimg.src;
+    }
+  </script>
 </body>
 
 </html>
