--- a/infoUsuario.html
+++ b/infoUsuario.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nosotros</title>
+    <title>Cuenta de Usuario</title>
     <!-- iconos bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- css bootstrap -->
@@ -28,16 +28,165 @@
     <!-- ================= CONTENIDO ============== -->
     <main class="wrapper">
         <section class="container">
-            <div class="title">
-                <h1>Aqui se va a desplegar la información del usuario</h1>
-            </div>
-            <!-- ============= Resumen del proyecto ================ -->
-            <div class="card" style="margin-bottom: 1.5rem; text-align: justify;">
-                <div class="card-body">
-                    
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-xl-2 g-2">
+
+                <div class="col" style="margin: 3rem auto;">
+                    <div class="card h-100">
+                        <div class="card-header border-0" style="background-color: white;">
+                            <h2 style="text-align: center;">Bienvenid@ a tu cuenta ${usuario.nombre}</h2>
+                        </div>
+                        <div class="card-body justify-content-center d-flex" style="flex-direction: column; ">
+
+
+
+                            <table>
+                                <tbody>
+                                    <!-- ================= Nombre usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="nombre" class="form-label" style="color:black;">
+                                                    <h3>Nombre:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;"> 
+                                            <div>
+                                                <h3>{${usuario.nombre}} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a>
+                                                </h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Apellido usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="apellido" class="form-label" style="color:black;">
+                                                    <h3>Apellido:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>{${usuario.apellido}} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Telefono usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="telefono" class="form-label" style="color:black;">
+                                                    <h3>Teléfono:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>{${usuario.telefono}} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Email usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="email" class="form-label" style="color:black;">
+                                                    <h3>Correo electrónico:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>{{ usuario.email }} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Password usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="password" class="form-label" style="color:black;">
+                                                    <h3>Contraseña:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>Actualizar contraseña <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Domicilio usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="password" class="form-label" style="color:black;">
+                                                    <h3>Domicilio:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>{{ usuario.domicilio }} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <!-- ================= Estado usuario ============== -->
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <label for="password" class="form-label" style="color:black;">
+                                                    <h3>Estado:</h3>
+                                                </label>
+                                            </div>
+                                        </td>
+                                        <th style="text-align: right;">
+                                            <div>
+                                                <h3>{{ usuario.estado }} <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3a8761" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                                </svg></a></h3>
+                                            </div>
+                                        </th>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+
+                            <!-- Botón de Actualizar-->
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button type="button" class="btn btn-warning" id="btnActualizar"
+                                    style="margin: 2rem 0 2rem 0;">
+                                    <span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                                          </svg>
+                                    </span>
+                                    Guardar cambios </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-           
         </section>
     </main>
 
@@ -52,6 +201,12 @@
 
     <!---JS Nabvar & Footer--->
     <script src="./js/navfooter2.js"></script>
+
+    <!-- Funciones de alta de productos -->
+    <script src="./js/alta.js"></script>
+
+    <!-- Sweetalert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
