Se agrega Herramientas y tecnologias en nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -168,7 +168,7 @@
                         <br>
                         <br>
                         En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco de trabajo SCRUM y
-                        utilizamos las siguientes tecnologías:
+                        utilizamos las siguientes herramientas y tecnologías:
                     <div class="icons_tech">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"
                             title="HTML5" alt="HTML" width="50" height="50" />
