ajuste de cards

--- a/productos.html
+++ b/productos.html
@@ -110,7 +110,7 @@
 
             <!-- catalogo -->
 
-            <div id="main__prods" class="container mt-0 row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-6">
+            <div id="main__prods" class="mt-0 mx-auto row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-6">
 
             </div>
 
