se ajusta navbar general responsivo

--- a/template.html
+++ b/template.html
@@ -26,7 +26,8 @@
 <body>
     <header id="navbar"></header>
     <main class="wrapper">
-        <section class="container"></section>
+        
+        
     </main>
     <footer id="footer"></footer>
 
@@ -37,7 +38,7 @@
     <!-- Login -->
     <script src="./js/Login.js"></script>
     <!-- Nav & Footer -->
-    <script src="./js/navfooter2.js" defer></script>
+    <script src="./js/navfooter.js" defer></script>
     <!-- Sweetalert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
